--- a/recipe-app/src/App.css
+++ b/recipe-app/src/App.css
@@ -1,9 +1,11 @@
+@import url(https://fonts.googleapis.com/css?family=Open+Sans);
+
 .App {
   text-align: center;
   background-image: linear-gradient(45deg, #a6c0fe, #f68084);
 }
 
-.Title {
+.title {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 52px;
   margin-bottom: 20px;
@@ -11,20 +13,41 @@
 
 }
 
-.SearchBar {
-  position: relative;
-  font-size: 24px;
-  width: 400px;
-  padding: 10px;
-  border-radius: 30px;
-  border-color: white;
-  border: none;
-	outline: none;
-  background: transparent;
+.search-input {
+  width: 450px;
+  background-color: white;
+  border: 1px solid #eee;
+  height: 45px;
+  font-size: 18px;
+  padding: 15px;
+  margin-right: 10px;
+  border-radius: 9999px;
 
-  &:focus + span {
-    opacity: 1;
-		transform: scale(1);
-  }
+}
+
+.search-input.focus {
+  background-color: #f68084;
+
+}
+
+.search-button {
+  height: 45px;
+  width: 50px;
+  border-radius: 9999px;
+  border-color: transparent;
+  background-color: #a6c0fe;
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+
+}
+
+.search-button p {
+  font-weight: 900;
+  color: black;
+  font-size: 18px;
+}
+
+.search-button:hover {
+  background-color: #80d5f6;
 
 }
