--- a/recipe-app/src/App.css
+++ b/recipe-app/src/App.css
@@ -2,7 +2,16 @@
 
 .App {
   text-align: center;
-  background-image: linear-gradient(45deg, #a6c0fe, #f68084);
+  background-color: rgb(230, 230, 230);
+  align-content: center;
+
+}
+
+input:focus,
+select:focus,
+textarea:focus,
+button:focus {
+    outline: none;
 }
 
 .title {
@@ -50,4 +59,86 @@
 .search-button:hover {
   background-color: #80d5f6;
 
+}
+
+.v-gap {
+  margin-bottom: 50px;
+
+}
+
+.v-gap-10 {
+  margin-bottom: 10px;
+
+}
+
+.recipes {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  max-width: 60%;
+  margin: auto;
+
+}
+
+.recipe {
+  border-radius: 30px;
+  box-shadow: 0px 5px 20px rgb(117, 117, 117);
+  margin: 20px 20px 50px 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  background: white;
+  align-items: center;
+  overflow: hidden;
+  min-width: 40%;
+  padding-bottom: 30px;
+  transition: all 1s;
+
+}
+
+.recipe:hover {
+  background: #ebf1f8;
+  -webkit-transform: scale(1.05);
+  -ms-transform: scale(1.05);
+  transform: scale(1.05);
+  transition: all 1s ease-out;
+ 
+}
+
+.fill {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    width: 100%;
+    height: 50%;
+    margin: -30px;
+}
+
+.fill img {
+  flex-shrink: 0;
+  min-width: 100%;
+  min-height: 100%;
+}
+
+.read-more {
+  text-decoration: none;
+  text-transform: uppercase;
+  background-color: #a6c0fe;
+  transition: all 0.3s ease 0s;
+  color: black;
+  font-weight: 900;
+  font-size: 18px;
+  padding: 1em 1.5em;
+  border-radius: 9999px;
+
+}
+
+.read-more:hover{
+  background-color: #80d5f6;
+
+}
+
+.uppercase {
+  text-transform: uppercase;
 }
