--- a/recipe-app/src/App.css
+++ b/recipe-app/src/App.css
@@ -5,22 +5,20 @@
   background-color: rgb(230, 230, 230);
   align-content: center;
   min-height: 100vh;
-
 }
 
 input:focus,
 select:focus,
 textarea:focus,
 button:focus {
-    outline: none;
+  outline: none;
 }
 
 .title {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-size: 52px;
   margin-bottom: 20px;
   padding-top: 60px;
-
 }
 
 .search-input {
@@ -32,12 +30,10 @@ button:focus {
   padding: 15px;
   margin-right: 10px;
   border-radius: 9999px;
-
 }
 
 .search-input.focus {
   background-color: #f68084;
-
 }
 
 .search-button {
@@ -48,7 +44,6 @@ button:focus {
   background-color: #a6c0fe;
   transition: all 0.3s ease 0s;
   cursor: pointer;
-
 }
 
 .search-button p {
@@ -59,17 +54,14 @@ button:focus {
 
 .search-button:hover {
   background-color: #80d5f6;
-
 }
 
 .v-gap {
   margin-bottom: 50px;
-
 }
 
 .v-gap-10 {
   margin-bottom: 10px;
-
 }
 
 .recipes {
@@ -78,7 +70,6 @@ button:focus {
   flex-wrap: wrap;
   max-width: 60%;
   margin: auto;
-
 }
 
 .recipe {
@@ -94,7 +85,6 @@ button:focus {
   min-width: 40%;
   padding-bottom: 30px;
   transition: all 1s;
-
 }
 
 .recipe:hover {
@@ -103,17 +93,16 @@ button:focus {
   -ms-transform: scale(1.05);
   transform: scale(1.05);
   transition: all 1s ease-out;
- 
 }
 
 .fill {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
-    width: 100%;
-    height: 50%;
-    margin: -30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  width: 100%;
+  height: 50%;
+  margin: -30px;
 }
 
 .fill img {
@@ -132,12 +121,10 @@ button:focus {
   font-size: 18px;
   padding: 1em 1.5em;
   border-radius: 9999px;
-
 }
 
-.read-more:hover{
+.read-more:hover {
   background-color: #80d5f6;
-
 }
 
 .uppercase {
